--- a/hugo/src/scss/_variables-custom.scss
+++ b/hugo/src/scss/_variables-custom.scss
@@ -1,4 +1,3 @@
 $navbar-collapsed-height: 3rem;
 $navbar-collapsed-padding-x: $grid-gutter-width / 2;
 $topic-spacer: $line-height-base * .4em;
-$backdrop-filter: blur(4px) saturate(3);
